--- a/web/src/Scss/App.scss
+++ b/web/src/Scss/App.scss
@@ -11,7 +11,8 @@
 @import "../components/Header/Search/style.scss";
 
 
-@import "../components/Main/style.scss";
+@import "../components/Screen/style.scss";
+@import "../Components/Screen/Main/style.scss";
 
 
 @import "../components/Footer/style.scss";
