--- a/web/src/Components/Header/Menu/style.scss
+++ b/web/src/Components/Header/Menu/style.scss
@@ -8,8 +8,20 @@
     // transform: translateY(-100%);
     // transition: 1s;
     z-index: 4;
-    &__opened{
+    &_opened{
         display: block;
         // transform: translateY(0%);
+    }
+    &_link{
+        padding: 5px;
+        text-decoration:none;
+        color: white;
+        display: block;
+        border-bottom: 1px solid transparent;
+        &:hover{
+            // color:black;
+            border-bottom: 1px solid black;
+            background: linear-gradient(135deg, #0083ff, #0083ff,  $one-blue);     
+        }
     }
 }
