Formik reg login

--- a/web/src/Scss/App.scss
+++ b/web/src/Scss/App.scss
@@ -12,6 +12,9 @@
 
 @import "../components/Screen/style.scss";
 @import "../Components/Screen/Main/style.scss";
+@import "../Components/Screen/Registration/style.scss";
+@import "../Components/Screen/LogIn/style.scss";
+
 
 
 @import "../components/Footer/style.scss";
