--- a/web/src/Components/Header/Search/style.scss
+++ b/web/src/Components/Header/Search/style.scss
@@ -6,12 +6,9 @@
     border-radius: 15px;
     background: $white;
     box-shadow: 0 0 10px $comb-two_one;
-    // box-shadow: 0 0 10px #ff4da6;
-    
     color: $comb-two_five;
     padding: 0 15px;
-
-    input{
+    &__field{
         border:none;
         height: 100%;
         width: 580px;
